[bugfix] highlighted track corners were sticking out around the rounded borders

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -8,7 +8,7 @@ html, body{
     background: -o-linear-gradient(bottom right,  $pink, $pink, $pink, $yellow, $yellow, $yellow); /* For Opera 11.1 to 12.0 */
     background: -moz-linear-gradient(bottom right,  $pink, $pink, $pink, $yellow, $yellow, $yellow); /* For Firefox 3.6 to 15 */
     background: linear-gradient(to bottom right,  $pink, $pink, $pink, $yellow, $yellow, $yellow); /* Standard syntax */
-    background-size: 400% 400%;
+    background-size: 500% 500%;
     -webkit-animation: AnimationName 30s linear infinite;
     -moz-animation: AnimationName 30s linear infinite;
     animation: AnimationName 30s linear infinite;
