--- a/css/main.scss
+++ b/css/main.scss
@@ -34,6 +34,26 @@ h2{
   line-height: 50px;
   width: 300px;
   text-align: right;
+  position: relative;
+  &:before{
+    display:none;
+    content: ' ';
+    width: 400px;
+    height: 550px;
+    background: transparent url("/assets/img/girl1.png") no-repeat center center;
+    background-size: contain;
+    position: absolute;
+    top: -93px;
+    left: -395px;
+    @include breakpoint(md){
+      display: block;
+    }
+    @include breakpoint(lg){
+      //height: 800px;
+      //width: 600px;
+      //left: -576px;
+    }
+  }
   span{
     font-size: 120%;
   }
@@ -84,29 +104,12 @@ h2{
   display: inline-block;
   min-width: 300px;
   position: relative;
-  &:before{
-    display:none;
-    content: ' ';
-    width: 400px;
-    height: 550px;
-    background: transparent url("/assets/img/girl1.png") no-repeat center center;
-    background-size: contain;
-    position: absolute;
-    top: -219px;
-    left: -405px;
-    @include breakpoint(md){
-      display: block;
-    }
-    @include breakpoint(lg){
-      //height: 800px;
-      //width: 600px;
-      //left: -576px;
-    }
-  }
+  overflow: hidden;
   .table{
     .playlist-row{ cursor: pointer; }
     text-align: left;
     margin-bottom: 0;
+    overflow: hidden;
     thead{
       color: $yellow;
     }
